[gd_scene load_steps=5 format=3 uid="uid://bpkvjlrxk3jp7"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_5ut1b"]
[ext_resource type="PackedScene" uid="uid://blejtq8ghcntx" path="res://level/settings.tscn" id="2_cuj6k"]
[ext_resource type="PackedScene" uid="uid://cvq1e8oa7bwwd" path="res://level/PauseMenu.tscn" id="3_pcb5f"]
[ext_resource type="PackedScene" uid="uid://cijwgx3klstjr" path="res://level/credits.tscn" id="4_c0fmf"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ut1b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.230315, 0.230315, 0.230315, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -68.0
offset_right = 84.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="jouer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JOUER"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PARAMETRES"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUITTER"

[node name="Settings" parent="." instance=ExtResource("2_cuj6k")]
visible = false
layout_mode = 1
offset_top = -2.0
offset_bottom = -2.0

[node name="PauseMenu" parent="." instance=ExtResource("3_pcb5f")]
visible = false
layout_mode = 1
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0

[node name="Credits" parent="." instance=ExtResource("4_c0fmf")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/jouer" to="." method="_on_jouer_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
